objects/User.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approver in an approval process. Users with this checkbox = true see the Items to Approve component on their home page.</description>
        <inlineHelpText>Approver in an approval process. Users with this checkbox = true see the Items to Approve component on their home page.</inlineHelpText>
        <label>Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Branch_Number__c</fullName>
        <description>It stores the branch id.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_User_Name__c</fullName>
        <formula>FirstName + &apos; &apos;+ LastName +&apos; - $&apos;+ TEXT(LLC_BI__Secured_Individual_Lending_Authority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Max_Rate_Adjustment__c</fullName>
        <description>Users populate this optional field to adjust the maximum interest rate calculated by the rate sheet. By default, it is blank.</description>
        <label>Max Rate Adjustment</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Min_Rate_Adjustment__c</fullName>
        <description>Users populate this optional field to adjust the minimum interest rate calculated by the rate sheet. By default, it is blank.</description>
        <label>Min Rate Adjustment</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_License_State__c</fullName>
        <description>Users select a state from this picklist to identify the issuing state that issued the Mortgage License. By default, it is blank.</description>
        <inlineHelpText>Select the state that issued the Mortgage License.</inlineHelpText>
        <label>Mortgage License State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_License__c</fullName>
        <description>Administrators populate this mandatory field to capture a user&apos;s unique Mortgage License number. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the user&apos;s unique Mortgage License number.</inlineHelpText>
        <label>Mortgage License</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NMLS__c</fullName>
        <description>Administrators populate this mandatory field to capture a user&apos;s unique National Mortgage Licensing System (NMLS) number. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the user&apos;s unique National Mortgage Licensing System (NMLS) number.</inlineHelpText>
        <label>NMLS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Officer_Number__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify a unique number assigned to the user (officer).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s secured lending authority.</description>
        <label>Secured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unsecured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s unsecured lending authority.</description>
        <label>Unsecured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__nCino_User__c</fullName>
        <description>This field is automatically populated as enabled. This field indicates whether the user has a license for the nCino Platform or not.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>nCino User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when choosing to turn off ALL Triggers for an individual user. This will typically apply to nCino &amp; Salesforce Administrators.</description>
        <inlineHelpText>This field should be checked when choosing to turn off ALL Triggers for an individual user. This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
        <label>No Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when choosing to turn off ALL validation rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</description>
        <inlineHelpText>This field should be checked when choosing to turn off ALL validation rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
        <label>No Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when choosing to turn off ALL workflow rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</description>
        <inlineHelpText>This field should be checked when choosing to turn off ALL workflow rules for an individual user.  This will typically apply to nCino &amp; Salesforce Administrators.</inlineHelpText>
        <label>No Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Officer_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Codes</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T1_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This individual has CS Relationship Tier 1 Approval authority</inlineHelpText>
        <label>T1 Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T2_T3_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This individual has CS Relationship Tier 2 &amp; 3 Approval authority</inlineHelpText>
        <label>T2-T3 Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used for pForce uploads</inlineHelpText>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Has_Reached_Ownership_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field indicates if the user has reached the configured maximum number of owned Accounts for role optimization</description>
        <label>Has Reached Ownership Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Customer_Portal_Account_Owner_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field indicates whether or not this user owns Customer Portal user records.</description>
        <label>Is Customer Portal Account Owner User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Sharing_History__c</fullName>
        <description>This long text field is automatically populated upon the deactivation of a Customer Portal User. It is used to capture all of the records to which the Portal User had sharing access.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This long text field is automatically populated upon the deactivation of a Customer Portal User. It is used to capture all of the records to which the Portal User had sharing access.</inlineHelpText>
        <label>Customer Portal Sharing History</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__User_Created_Customer_Engagement_PW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox field if the user has created their own password for the Customer Engagement Solution (such as through self-registration, an online application workflow, or Single Sign-On).</description>
        <label>User-Created Customer Engagement PW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>“F”, “M”, “U”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Lendable_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the lender is allowed to make loans outside of the their area of operations.</description>
        <inlineHelpText>Indicates whether the lender is allowed to make loans outside of the their area of operations.</inlineHelpText>
        <label>Lendable Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Lender_Tax_ID__c</fullName>
        <description>Returns Company Tax ID Custom Label</description>
        <formula>$Label.nSBA__Company_Tax_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__SBA_Lender_FIRS__c</fullName>
        <description>Returns SBA Lender FIRS Tax ID Custom Label</description>
        <formula>$Label.nSBA__SBA_FIRS</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBA Lender FIRS</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Compliance_Review_Role</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Compliance Review</value>
        </filters>
        <label>Active Compliance Review - Role</label>
    </listViews>
    <listViews>
        <fullName>Active_Credit_Processors</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Credit &amp; Processor</value>
        </filters>
        <label>Active Credit &amp; Processors</label>
    </listViews>
    <listViews>
        <fullName>Active_Processors</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Processor</value>
        </filters>
        <label>Active Processors</label>
    </listViews>
    <listViews>
        <fullName>Active_Relationship_Manager_Credit</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Relationship Manager &amp; Credit</value>
        </filters>
        <label>Active Relationship Manager &amp; Credit</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>Contract_Services</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Contract Services</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contract Services</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MFA_Emergency_Profiles</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Contract Services</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Call Center Agent or Sup</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Relationship Manager &amp; Credit</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Treasury Sales Officer</value>
        </filters>
        <label>MFA Emergency Profiles</label>
    </listViews>
    <listViews>
        <fullName>XMFA_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>PHONE_VERIFIED</columns>
        <columns>HAS_TOTP</columns>
        <columns>HAS_AUTHENTICATOR</columns>
        <columns>HAS_TEMP_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MFA view</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>